# Lwd

./: .gitignore  Cargo.toml  README.md  lianworld
docs/: 01_OVERVIEW.md  02_ARCHITECTURE.md  03_ENGINE_ALGORITHM.md  04_PIPELINE.md  05_SNAPSHOT.md  06_GUI.md  07_CONFIG.md  08_ALGORITHM_GUIDE.md  09_KNOWN_ISSUES.md  README.md  algorithm_guide.md  known_issues.md  modules.md  ui_guide.md
src/: main.rs
src/algorithms/: biome_division.rs  mod.rs
src/algorithms/biome_division/: crimson.rs  desert.rs  forest.rs  forest_fill.rs  jungle.rs  mod.rs  ocean.rs  params.rs  snow.rs  space_hell.rs  stone_fill.rs
src/assets/: biome.json  blocks.json  steps.json  world.json
src/config/: biome.rs  blocks.rs  mod.rs  steps.rs  world.rs
src/core/: biome.rs  block.rs  color.rs  geometry.rs  layer.rs  mod.rs  world.rs
src/docs/: Create.md
src/generation/: algorithm.rs  biome_division.rs  mod.rs  optimizer.rs  pipeline.rs  reset.rs  snapshot.rs  step.rs
src/rendering/: canvas.rs  gl_canvas.rs  mod.rs  viewport.rs
src/storage/: engine_config.rs  mod.rs  paths.rs  perf_log.rs  runtime.rs
src/ui/: algo_config.rs  app.rs  canvas_view.rs  control_panel.rs  geo_preview.rs  layer_config.rs  mod.rs  overlay_config.rs  perf_panel.rs  shape_sandbox.rs  splash.rs  status_bar.rs  theme.rs
