[package]
name = "Lwd"
version = "1.0.0"
edition = "2024"
description = "Lian World — Terraria 风格 2D 世界生成可视化工具"
authors = ["Lian"]

[dependencies]
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
image = "0.25"
rfd = "0.15"
noise = "0.9"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
